--- a/elk/docker-compose.repo/docker-compose .yml
+++ b/elk/docker-compose.repo/docker-compose .yml
@@ -3,15 +3,17 @@ version: '2'
 services:
   kibana:
     image: docker.elastic.co/kibana/kibana:6.2.2
-#      volumes:
-#      - ./kibana.yml:/usr/share/kibana/config/kibana.yml
-    environment:
-      SERVER_NAME: kibana.example.org
-      ELASTICSEARCH_URL: http://127.0.0.1:9200
+    volumes:
+      - ./config/kibana.yml:/usr/share/kibana/config/kibana.yml
+  #    environment:
+  #      SERVER_NAME: kibana.example.org
+  #      ELASTICSEARCH_URL: http://elasticsearch:9200
+    ports:
+      - 5601:5601
     depends_on:
       - elasticsearch
     networks:
-      - host   
+      - esnet
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:6.2.2
     container_name: elasticsearch
@@ -20,13 +22,14 @@ services:
       - bootstrap.memory_lock=true
       - discovery.type=single-node
       - ES_JAVA_OPTS=-Xms256m -Xmx256m
-#    ulimits:
-#      memlock:
-#        soft: -1
-#        hard: -1
+      - ELASTIC_PASSWORD=cqx534
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
     volumes:
       - esdata1:/usr/share/elasticsearch/data
-      - /usr/share/elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
+      - ./config/jvm.options:/usr/share/elasticsearch/config/jvm.options
     ports:
       - 9200:9200
       - 9300:9300
@@ -37,4 +40,4 @@ volumes:
   esdata1:
     driver: local
 networks:
-  host: 
+  esnet: bridge
