--- a/elk/docker-compose.repo/config/logstash.yml
+++ b/elk/docker-compose.repo/config/logstash.yml
@@ -1,12 +1,8 @@
 http.host: 0.0.0.0
 path.config: /usr/share/logstash/pipeline
+xpack.monitoring.elasticsearch.url: http://elasticsearch:9200
+xpack.monitoring.elasticsearch.username: elastic
+xpack.monitoring.elasticsearch.password: cqx534
 # PIPELINE_WORKERS: pipeline.workers
 # LOG_LEVEL: log.level
 # XPACK_MONITORING_ENABLED: xpack.monitoring.enabled
-xpack:
-  monitoring:
-    elasticsearch:
-      url: http://111.231.200.131:9200
-      username: logstash_system
-      password: cqx534
-
