--- a/elk/docker-compose.repo/docker-compose .yml
+++ b/elk/docker-compose.repo/docker-compose .yml
@@ -1,13 +1,21 @@
 version: '2'
 
 services:
+  logstash:
+    image: docker.elastic.co/logstash/logstash:6.2.2
+    volumes:
+      - ./config/logstash.yml:/usr/share/logstash/config/logstash.yml
+      - ./config/logstash.conf:/usr/share/logstash/pipeline/logstash.conf
+    environment:
+      LS_JAVA_OPTS: -Xmx256m -Xms256m
+    depends_on:
+      - elasticsearch  
+    ports:
+      - 5000:5000
   kibana:
     image: docker.elastic.co/kibana/kibana:6.2.2
     volumes:
       - ./config/kibana.yml:/usr/share/kibana/config/kibana.yml
-  #    environment:
-  #      SERVER_NAME: kibana.example.org
-  #      ELASTICSEARCH_URL: http://elasticsearch:9200
     ports:
       - 5601:5601
     depends_on:
@@ -34,7 +42,7 @@ services:
       - 9200:9200
       - 9300:9300
     networks:
-      - host
+      - esnet
 
 volumes:
   esdata1:
