--- a/elk/docker-compose.repo/config/logstash.conf
+++ b/elk/docker-compose.repo/config/logstash.conf
@@ -8,6 +8,8 @@ input {
 
 output {
 	elasticsearch {
-		hosts => "elasticsearch:9200"
+		hosts => elasticsearch:9200
+		user => elastic
+        password => cqx534
 	}
 }
