--- a/elk/docker-compose.repo/docker-compose.yml
+++ b/elk/docker-compose.repo/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - elasticsearch  
     ports:
       - 5000:5000
+      - 5044:5044
   kibana:
     image: docker.elastic.co/kibana/kibana:6.2.2
     volumes:
@@ -43,9 +44,18 @@ services:
       - 9300:9300
     networks:
       - esnet
-
+  filebeat:
+    image: docker.elastic.co/beats/filebeat:6.2.2
+    volumes:
+      - ./config/filebeat.yml:/usr/share/filebeat/filebeat.yml:ro
+      - /root/repo/elk/logstash-tutorial.log:/usr/share/filebeat/logstash-tutorial.log
+    depends_on:
+      - logstash
+    networks:
+      - esnet
 volumes:
   esdata1:
     driver: local
 networks:
-  esnet: bridge
+  esnet:
+    driver: bridge
