--- a/elk/docker-compose.repo/config/kibana.yml
+++ b/elk/docker-compose.repo/config/kibana.yml
@@ -2,5 +2,5 @@ server.name: kibana
 server.host: "0"
 elasticsearch.url: http://elasticsearch:9200
 elasticsearch.username: elastic
-elasticsearch.password: cqx534
+elasticsearch.password: abcdefg
 # xpack.monitoring.ui.container.elasticsearch.enabled: true
