--- a/elk/docker-compose.repo/elastic.yml
+++ b/elk/docker-compose.repo/elastic.yml
@@ -9,7 +9,7 @@ services:
       - bootstrap.memory_lock=true
       - discovery.type=single-node
       - ES_JAVA_OPTS=-Xmx256m -Xms256m
-      - ELASTIC_PASSWORD=cqx534  
+      - ELASTIC_PASSWORD=abcdefg
     ulimits:
       memlock:
         soft: -1
