--- a/elk/docker-compose.repo/config/logstash.conf
+++ b/elk/docker-compose.repo/config/logstash.conf
@@ -2,14 +2,31 @@ input {
 	tcp {
 		port => 5000
 	}
+	beats {
+        	port => 5044
+    	}
 }
 
 ## Add your filters / logstash plugins configuration here
+filter {
+    grok {
+        match => { "message" => "%{COMBINEDAPACHELOG}"}
+    }
+    geoip {
+        source => "clientip"
+    }
+}
 
 output {
 	elasticsearch {
 		hosts => elasticsearch:9200
-		user => elastic
+        user => elastic
         password => abcdefg
+   		manage_template => false
+   		index => "%{[@metadata][beat]}-%{[@metadata][version]}-%{+YYYY.MM.dd}"
+    		document_type => "%{[@metadata][type]}"
+	}
+	stdout {
+		codec => rubydebug
 	}
 }
