--- a/elk/docker-compose.repo/docker-compose.yml
+++ b/elk/docker-compose.repo/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       - bootstrap.memory_lock=true
       - discovery.type=single-node
       - ES_JAVA_OPTS=-Xms256m -Xmx256m
-      - ELASTIC_PASSWORD=cqx534
+      - ELASTIC_PASSWORD=abcdefg
     ulimits:
       memlock:
         soft: -1
