--- a/elk/docker-compose.repo/config/logstash.conf
+++ b/elk/docker-compose.repo/config/logstash.conf
@@ -18,15 +18,21 @@ filter {
 }
 
 output {
-	elasticsearch {
-		hosts => elasticsearch:9200
-        user => elastic
-        password => abcdefg
-   		manage_template => false
-   		index => "%{[@metadata][beat]}-%{[@metadata][version]}-%{+YYYY.MM.dd}"
-    	document_type => "%{[@metadata][type]}"
-	}
-	stdout {
-		codec => rubydebug
-	}
+    if[type] == 'admin-log' {
+        elasticsearch {
+        		hosts => elasticsearch:9200
+                user => elastic
+                password => abcdefg
+           		manage_template => false
+           		index => "%{[@metadata][beat]}-%{[@metadata][version]}-%{+YYYY.MM.dd}"
+            	document_type => "%{[@metadata][type]}"
+        }
+        stdout {
+            	codec => rubydebug
+        }
+    } else {
+        stdout {
+                codec => rubydebug
+        }
+    }
 }
